<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/wordseekWelcomeBanner"
        android:layout_width="319dp"
        android:layout_height="523dp"
        android:src="@drawable/banner"
        app:layout_constraintBottom_toBottomOf="@+id/mainRegisterBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
